<resources>
    <string name="app_name">AchordAndroidApp</string>
    <string name="title_activity_new_song">NewSongActivity</string>
    <string name="title_name">Name</string>
    <string name="title_author">Author</string>
    <string name="title_key">Key</string>
    <string name="title_signature">Signature</string>
    <string name="title_startEditing">Start Editing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>